--- a/index.html
+++ b/index.html
@@ -59,5 +59,19 @@
             </div>
         </div>
     </nav>
+
+    <header>
+        <div class="headerImgContainer wrapper">
+            <img src="./assets/header-image.jpg" alt="A child in overalls playing with colourful wooden blocks on the floor">
+        </div>
+        <div class="headerContent wrapper">
+            <div class="contentContainer">
+                <h5>Handcrafted for kids</h5>
+                <h3>Go on, let them play with wooden blocks.</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga eveniet ab nemo nam rerum eum unde quam officiis veritatis. Sit perferendis magni quaerat non earum, iusto suscipit nam ad pariatur.</p>
+                <button>Shop All</button>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
