--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STARTER - Toybox Homepage</title>
     <script src="https://kit.fontawesome.com/af4482c1be.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
     <div class="annoucements">
@@ -74,6 +75,35 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="gallery" id="gallery">
+            <div class="wrapper">
+                <h5>Follow Us</h5>
+                <h2>Check our Instagram for great content</h2>
+                <div class="galleryItems">
+                    <a href="https://www.instagram.com/" class="item">
+                        <img src="./assets/01insta.jpg" alt="Giraffe toy">
+                    </a>
+                    <a href="https://www.instagram.com/" class="item">
+                        <img src="./assets/02insta.jpg" alt="Whale stuffed toy">
+                    </a>
+                    <a href="https://www.instagram.com/" class="item">
+                        <img src="./assets/03insta.jpg" alt="Toddler in a dress">
+                    </a>
+                    <a href="https://www.instagram.com/" class="item">
+                        <img src="./assets/04insta.jpg" alt="Toddler playing with wooden toy animals">
+                    </a>
+                    <a href="https://www.instagram.com/" class="item">
+                        <img src="./assets/05insta.jpg" alt="Toy safari animals and trees">
+                    </a>
+                    <a href="https://www.instagram.com/" class="item">
+                        <img src="./assets/06insta.jpg" alt="Toddler playing with wooden toy animals">
+                    </a>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
     <footer id="footer">
