Finished navigation including slide out menu.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h1>Toybox</h1>
             </a>
             <div class="searchCart">
-                <button class="searchIcon">
+                <button class="menuIcon">
                     <img src="assets/search.svg" alt="Search button" class="searchIcon"> 
                 </button>
 
