--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="contentContainer">
                 <h5>Handcrafted for kids</h5>
                 <h3>Go on, let them play with wooden blocks.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga eveniet ab nemo nam rerum eum unde quam officiis veritatis. Sit perferendis magni quaerat non earum, iusto suscipit nam ad pariatur.</p>
+                <p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar tellus.</p>
                 <button>Shop All</button>
             </div>
         </div>
